<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_general"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="@string/tv_title"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_marginTop="@dimen/padding_general"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_box"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_product1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/red"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producto 1"/>

            <TextView
                android:id="@+id/tv_count_product1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_count_placeholder"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_product2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/gray"
            android:layout_marginLeft="@dimen/padding_general"
            android:layout_marginRight="@dimen/padding_general"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producto 2"/>

            <TextView
                android:id="@+id/tv_count_product2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_count_placeholder"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_product3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/purple"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producto 3"/>

            <TextView
                android:id="@+id/tv_count_product3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_count_placeholder"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_box"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_product4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/light_blue"
            android:layout_marginTop="@dimen/padding_general"
            android:layout_marginBottom="@dimen/padding_general"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producto 4"/>

            <TextView
                android:id="@+id/tv_count_product4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_count_placeholder"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_product5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="@dimen/padding_general"
            android:layout_marginRight="@dimen/padding_general"
            android:background="@color/mint"
            android:layout_marginTop="@dimen/padding_general"
            android:layout_marginBottom="@dimen/padding_general"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producto 5"/>

            <TextView
                android:id="@+id/tv_count_product5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_count_placeholder"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_product6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/orange"
            android:layout_marginTop="@dimen/padding_general"
            android:layout_marginBottom="@dimen/padding_general"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producto 6"/>

            <TextView
                android:id="@+id/tv_count_product6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_count_placeholder"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_box"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_product7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/yellow"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producto 7"/>

            <TextView
                android:id="@+id/tv_count_product7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_count_placeholder"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_product8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="@dimen/padding_general"
            android:layout_marginRight="@dimen/padding_general"
            android:background="@color/blue"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producto 8"/>

            <TextView
                android:id="@+id/tv_count_product8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_count_placeholder"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_product9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/green"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Producto 9"/>

            <TextView
                android:id="@+id/tv_count_product9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_count_placeholder"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_user"
        android:layout_marginTop="64dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_user"/>

    <EditText
        android:id="@+id/et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_email"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"/>

    <Button
        android:id="@+id/action_btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_text"/>

</LinearLayout>